# rocket-diesel-rest-api-example

./: .env  Cargo.toml
migrations/2020-09-28-152412_messages/: up.sql
src/: db.rs  main.rs  messages.rs  schema.rs  test.rs
