[package]
name = "rocket-diesel-rest-api-example"
version = "0.1.0"
authors = ["liyong <leonpa1987@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]